--- a/blog-detail.html
+++ b/blog-detail.html
@@ -234,171 +234,76 @@
       </div>
     </header>
     <!-- End Header ---------------------------------------------------------------------------------------------------------------------->
-    <main id="aboutUs">
-      <section class="banner">
-        <div class="d-none d-lg-none d-xl-block d-xxl-block videoBoxPC">
-          <video width="100%" id="videoPC">
-            <source src="./public/image/8eedc239-21d6-4b9f-a242-f844d9007bda.mp4" type="video/mp4">
-          </video>
-          <div class="bgBanner"></div>
-          <div class="content">
-            <i class="fa-solid fa-play"></i>
-            <div class="container">
-              <div class="row">
-                <div class="col-md-4">
-                  <h1>Who We Are</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="d-block d-xl-none d-xxl-none bannerMobile">
-          <div class="container">
-            <h1>Who We Are</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <div class="boxVideo">
-              <i class="fa-solid fa-play"></i>
-              <video width="100%" id="videoMobile">
-                <source src="./public/image/8eedc239-21d6-4b9f-a242-f844d9007bda.mp4" type="video/mp4">
-              </video>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- End Jumbotron ---------------------------------------------------------------------------------------------------------------------->
-      <section class="exp">
+    <main id="Blogs">
+      <section>
         <div class="container">
+          <h3 class="title">Company formation</h3>
+          <img src="./public/image/blog-post.png" alt="" class="w-100">
+          <br><br>
           <div class="row">
-            <div class="col-md-6">
-              <h4 class="title">
-                15-year EXPERIENCE in the tourism industry
-              </h4>
-              <p class="description"><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore </strong></p>
-              <p>Lorem ipsum dolor sit amet consectetur. Est sit amet placerat dis sapien nunc massa vulputate sapien. Massa vestibulum sed adipiscing et ut et proin. Est neque consequat porta tempus vulputate in elit. Diam nisi convallis risus mattis vulputate. Vitae euismod et luctus laoreet. Mauris tempor est nibh leo sed dui vitae id. Vel facilisis at congue nunc enim. Amet ac mauris neque aenean amet ipsum volutpat. Nunc velit semper blandit pellentesque scelerisque. Eu non lorem in massa ornare. Sem purus odio sed.</p>
-              <ul>
-                <li><i class="fa-solid fa-check"></i> Lorem ipsum dolor</li>
-                <li><i class="fa-solid fa-check"></i> Lorem ipsum dolor sit amet, consectetur</li>
-                <li><i class="fa-solid fa-check"></i> Lorem ipsum dolor</li>
-                <li><i class="fa-solid fa-check"></i> Lorem ipsum dolor sit amet, consectetur</li>
-                <li><i class="fa-solid fa-check"></i> Lorem ipsum dolor</li>
-                <li><i class="fa-solid fa-check"></i> Lorem ipsum dolor sit amet, consectetur</li>
-              </ul>
-            </div>
-            <div class="col-md-6">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="boxItem">
-                    <img src="./public/image/exp1.png" alt="">
-                    <h5>Professional</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="boxItem">
-                    <img src="./public/image/exp2.png" alt="">
-                    <h5>Reliable</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="boxItem">
-                    <img src="./public/image/exp3.png" alt="">
-                    <h5>Diverse</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="boxItem">
-                    <img src="./public/image/exp4.png" alt="">
-                    <h5>Safe</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
+            <div class="col-md-9">
+              <div class="boxBlog">
+                <div class="mainBlog">
+                  <h4>SUBTITLE FOR THIS BLOG - LOREM IPSUM DOLOR SIT AMET</h4>
+                  <p><strong><span style="white-space-collapse: preserve;">Author Name: Jane Doe<br /></span></strong><span style="white-space-collapse: preserve;">Author Information: lorem ipsum dolor sit</span><span style="white-space-collapse: preserve;"><br /></span></p>
+                  <p><span style="white-space-collapse: preserve;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</span><span style="white-space-collapse: preserve;"> velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span></p>
+                  <p>&nbsp;</p>
+                  <p><strong><span style="white-space-collapse: preserve;">Lorem Ipsum Dolor Sit Amet</span></strong><span style="white-space-collapse: preserve;"><br /></span></p>
+                  <img src="./public/image/blog-post.png" alt="" class="w-100">
+                  <p><strong>Lorem Ipsum Dolor Sit Amet</strong></p>
+                  <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <img src="./public/image/blog-post.png" alt="" class="w-100">
+                  <p><strong>Lorem Ipsum Dolor Sit Amet</strong></p>
+                  <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <img src="./public/image/blog-post.png" alt="" class="w-100">
+                  <p><strong>Lorem Ipsum Dolor Sit Amet</strong></p>
+                  <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <img src="./public/image/blog-post.png" alt="" class="w-100">
+                  <p><strong>Lorem Ipsum Dolor Sit Amet</strong></p>
+                  <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
               </div>
+              
             </div>
-          </div>
-        </div>
-      </section>
-      <!-- End exp ---------------------------------------------------------------------------------------------------------------------->
-      <section class="ourService">
-        <div class="container">
-          <h4 class="title">OUR SERVICES </h4>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="box">
-                <h5 class="boxtitle">Visa Services</h5>
-                <div class="list">
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Tourist or Business eVisa</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Visa On Arrival (VOA)</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                </div>
+            <div class="col-md-3">
+              <div class="searchBlog">
+                <input type="text" class="search" placeholder="Search">
+                <i class="fa-solid fa-magnifying-glass"></i>
               </div>
-              <div class="box">
-                <h5 class="boxtitle">Consular Services</h5>
-                <div class="list">
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>5 Years Visa Exemption</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Consular Legalization</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Notarized Translation</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Vietnam Passport</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
+              <div class="latestBlogs">
+                <h4>Latest Blogs</h4>
+                <img src="./public/image/laste-blog.png" alt="" class="w-100">
+                <div class="cateBlog">Company formation</div>
+                <a href=""><h5>Lorem Ipsum</h5></a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
+              </div>
+              <div class="latestBlogList">
+                <div class="item">
+                  <div class="cateBlog">Company formation</div>
+                  <a href=""><h5>Lorem Ipsum</h5></a>
+                </div>
+                <div class="item">
+                  <div class="cateBlog">Company formation</div>
+                  <a href=""><h5>Lorem Ipsum</h5></a>
+                </div>
+                <div class="item">
+                  <div class="cateBlog">Company formation</div>
+                  <a href=""><h5>Lorem Ipsum</h5></a>
+                </div>
+                <div class="item">
+                  <div class="cateBlog">Company formation</div>
+                  <a href=""><h5>Lorem Ipsum</h5></a>
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
-              <div class="box">
-                <h5 class="boxtitle">AIRPORT SERVICES</h5>
-                <div class="list">
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Fast Track</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Car Pick-up/Drop-off</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>e-SIM</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                </div>
-              </div>
-              <div class="box">
-                <h5 class="boxtitle">UPDATED SOON</h5>
-                <div class="list">
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Immigrant Policies</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Study Abroad</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="chooseUs">
-        <div class="container">
-          <img src="./public/image/about01.png" alt="" class="w-100">
         </div>
       </section>
     </main>
