--- a/order-detail.html
+++ b/order-detail.html
@@ -234,173 +234,113 @@
       </div>
     </header>
     <!-- End Header ---------------------------------------------------------------------------------------------------------------------->
-    <main id="aboutUs">
-      <section class="banner">
-        <div class="d-none d-lg-none d-xl-block d-xxl-block videoBoxPC">
-          <video width="100%" id="videoPC">
-            <source src="./public/image/8eedc239-21d6-4b9f-a242-f844d9007bda.mp4" type="video/mp4">
-          </video>
-          <div class="bgBanner"></div>
-          <div class="content">
-            <i class="fa-solid fa-play"></i>
-            <div class="container">
-              <div class="row">
-                <div class="col-md-4">
-                  <h1>Who We Are</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="d-block d-xl-none d-xxl-none bannerMobile">
-          <div class="container">
-            <h1>Who We Are</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <div class="boxVideo">
-              <i class="fa-solid fa-play"></i>
-              <video width="100%" id="videoMobile">
-                <source src="./public/image/8eedc239-21d6-4b9f-a242-f844d9007bda.mp4" type="video/mp4">
-              </video>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- End Jumbotron ---------------------------------------------------------------------------------------------------------------------->
-      <section class="exp">
+    <main id="orderPage">
         <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <h4 class="title">
-                15-year EXPERIENCE in the tourism industry
-              </h4>
-              <p class="description"><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore </strong></p>
-              <p>Lorem ipsum dolor sit amet consectetur. Est sit amet placerat dis sapien nunc massa vulputate sapien. Massa vestibulum sed adipiscing et ut et proin. Est neque consequat porta tempus vulputate in elit. Diam nisi convallis risus mattis vulputate. Vitae euismod et luctus laoreet. Mauris tempor est nibh leo sed dui vitae id. Vel facilisis at congue nunc enim. Amet ac mauris neque aenean amet ipsum volutpat. Nunc velit semper blandit pellentesque scelerisque. Eu non lorem in massa ornare. Sem purus odio sed.</p>
-              <ul>
-                <li><i class="fa-solid fa-check"></i> Lorem ipsum dolor</li>
-                <li><i class="fa-solid fa-check"></i> Lorem ipsum dolor sit amet, consectetur</li>
-                <li><i class="fa-solid fa-check"></i> Lorem ipsum dolor</li>
-                <li><i class="fa-solid fa-check"></i> Lorem ipsum dolor sit amet, consectetur</li>
-                <li><i class="fa-solid fa-check"></i> Lorem ipsum dolor</li>
-                <li><i class="fa-solid fa-check"></i> Lorem ipsum dolor sit amet, consectetur</li>
-              </ul>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="profileBox">
+                        <div class="imageBox">
+                          <label for="avatar-upload">
+                            <i class="fa-solid fa-camera"></i>
+                          </label>
+                          <input id="avatar-upload" type="file">
+                          <img src="./public/image/avatar.png" alt="">
+                        </div>
+                        <h5>Nguyễn Văn Anh</h5>
+                        <ul class="tabs">
+                          <li><a href="./profile.html">Your Information</a></li>
+                          <li><a href="./order.html" class="active">Your orders</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div class="orderBox">
+                        <a href="./order.html"><i class="fa-solid fa-arrow-left"></i></a>
+                        <h1>Order Details</h1>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <table class="detailTable">
+                                    <tr>
+                                        <th>Order no:</th>
+                                        <td>VOA11051994</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Order date:</th>
+                                        <td>2023 - 07 - 27</td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="col-md-6">
+                                <table class="detailTable">
+                                    <tr>
+                                        <th>Payment status:</th>
+                                        <td>Completed</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Payment method:</th>
+                                        <td>PayPal</td>
+                                    </tr>
+                                    <tr>
+                                        <th class="text-color-red">Click here to pay: </th>
+                                        <td><a href="" class="text-color-red" style="text-decoration: underline;">Dolor sit amet consectetur</a></td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                        <h5>List of services</h5>
+                        <table class="table table-default orderTable table-bordered">
+                            <thead>
+                              <tr>
+                                <th scope="col" class="text-center"><input type="checkbox" name="" id=""></th>
+                                <th scope="col" class="text-center">No.</th>
+                                <th scope="col">Service Nane</th>
+                                <th scope="col">Description</th>
+                                <th scope="col" class="text-center">Price</th>
+                                <th scope="col" class="text-center">Status</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr class="">
+                                <th scope="row" class="text-center"><input type="checkbox" name="" id=""></th>
+                                <td class="text-center">1</td>
+                                <td>Arrival Fast Track</td>
+                                <td>Airport</td>
+                                <td class="text-center">$20</td>
+                                <td class="text-center">Completed</td>
+                              </tr>
+                              <tr class="">
+                                <th scope="row" class="text-center"><input type="checkbox" name="" id=""></th>
+                                <td class="text-center">2</td>
+                                <td>Arrival Fast Track</td>
+                                <td>Airport</td>
+                                <td class="text-center">$20</td>
+                                <td class="text-center">Completed</td>
+                              </tr>
+                              <tr class="">
+                                <th scope="row" class="text-center"><input type="checkbox" name="" id=""></th>
+                                <td class="text-center">3</td>
+                                <td>Arrival Fast Track</td>
+                                <td>Airport</td>
+                                <td class="text-center">$20</td>
+                                <td class="text-center">Completed</td>
+                              </tr>
+                              <tr class="">
+                                <th scope="row" class="text-center"><input type="checkbox" name="" id=""></th>
+                                <td class="text-center">4</td>
+                                <td>Arrival Fast Track</td>
+                                <td>Airport</td>
+                                <td class="text-center">$20</td>
+                                <td class="text-center">Completed</td>
+                              </tr>
+                            </tbody>
+                        </table>
+                        <div class="text-right">
+                            <button class="showPopup">Request Cancel order</button>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-6">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="boxItem">
-                    <img src="./public/image/exp1.png" alt="">
-                    <h5>Professional</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="boxItem">
-                    <img src="./public/image/exp2.png" alt="">
-                    <h5>Reliable</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="boxItem">
-                    <img src="./public/image/exp3.png" alt="">
-                    <h5>Diverse</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="boxItem">
-                    <img src="./public/image/exp4.png" alt="">
-                    <h5>Safe</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-      </section>
-      <!-- End exp ---------------------------------------------------------------------------------------------------------------------->
-      <section class="ourService">
-        <div class="container">
-          <h4 class="title">OUR SERVICES </h4>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="box">
-                <h5 class="boxtitle">Visa Services</h5>
-                <div class="list">
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Tourist or Business eVisa</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Visa On Arrival (VOA)</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                </div>
-              </div>
-              <div class="box">
-                <h5 class="boxtitle">Consular Services</h5>
-                <div class="list">
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>5 Years Visa Exemption</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Consular Legalization</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Notarized Translation</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Vietnam Passport</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="box">
-                <h5 class="boxtitle">AIRPORT SERVICES</h5>
-                <div class="list">
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Fast Track</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Car Pick-up/Drop-off</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>e-SIM</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                </div>
-              </div>
-              <div class="box">
-                <h5 class="boxtitle">UPDATED SOON</h5>
-                <div class="list">
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Immigrant Policies</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                  <div class="item">
-                    <h6 class="subTitle"><img src="./public/image/fly.svg" alt=""> <strong>Study Abroad</strong></h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="chooseUs">
-        <div class="container">
-          <img src="./public/image/about01.png" alt="" class="w-100">
-        </div>
-      </section>
     </main>
     <footer>
       <div class="container">
