--- a/order.html
+++ b/order.html
@@ -49,17 +49,17 @@
                 <li class="item">
                   <a href><strong>Services <i class="fa-solid fa-chevron-down"></i></strong></a>
                   <ul class="subMenu">
-                    <li><a href="">eVisa</a></li>
-                    <li><a href="">Visa On Arrival (VOA)</a></li>
-                    <li><a href="">Fast Track</a></li>
-                    <li><a href="">Car Pickup/ Dropoff</a></li>
-                    <li><a href="">eSIM</a></li>
-                    <li><a href="">5 Years Visa Exemption</a></li>
+                    <li><a href="./e-visa.html">eVisa</a></li>
+                    <li><a href="./voa.html">Visa On Arrival (VOA)</a></li>
+                    <li><a href="./fast-track.html">Fast Track</a></li>
+                    <li><a href="./car-pickup.html">Car Pickup/ Dropoff</a></li>
+                    <li><a href="./e-sim.html">eSIM</a></li>
+                    <li><a href="./5-years-visa.html">5 Years Visa Exemption</a></li>
                   </ul>
                 </li>
-                <li class="item"><a href>Pricing</a></li>
+                <li class="item"><a href="./pricing.html">Pricing</a></li>
                 <li class="item"><a href="./about-us.html">About us</a></li>
-                <li class="item"><a href>FAQs</a></li>
+                <li class="item"><a href="./frequently-a-q.html">FAQs</a></li>
                 <li class="item"><a href>Resources</a></li>
               </ul>
             </div>
@@ -95,17 +95,17 @@
               <li class="item">
                 <a class="showMenu" status="off">Services <i class="fa-solid fa-chevron-down"></i></a>
                 <ul class="subMenu">
-                  <li><a href="">eVisa</a></li>
-                  <li><a href="">Visa On Arrival (VOA)</a></li>
-                  <li><a href="">Fast Track</a></li>
-                  <li><a href="">Car Pickup/ Dropoff</a></li>
-                  <li><a href="">eSIM</a></li>
-                  <li><a href="">5 Years Visa Exemption</a></li>
+                  <li><a href="./e-visa.html">eVisa</a></li>
+                  <li><a href="./voa.html">Visa On Arrival (VOA)</a></li>
+                  <li><a href="./fast-track.html">Fast Track</a></li>
+                  <li><a href="./car-pickup.html">Car Pickup/ Dropoff</a></li>
+                  <li><a href="./e-sim.html">eSIM</a></li>
+                  <li><a href="./5-years-visa.html">5 Years Visa Exemption</a></li>
                 </ul>
               </li>
-              <li class="item"><a href>Pricing</a></li>
+              <li class="item"><a href="./pricing.html">Pricing</a></li>
               <li class="item"><a href="./about-us.html">About us</a></li>
-              <li class="item"><a href>FAQs</a></li>
+              <li class="item"><a href="./frequently-a-q.html">FAQs</a></li>
               <li class="item"><a href>Resources</a></li>
             </ul>
           </div>
@@ -240,20 +240,23 @@
                 <div class="col-md-3">
                     <div class="profileBox">
                         <div class="imageBox">
+                          <label for="avatar-upload">
                             <i class="fa-solid fa-camera"></i>
-                            <img src="./public/image/avatar.png" alt="">
+                          </label>
+                          <input id="avatar-upload" type="file">
+                          <img src="./public/image/avatar.png" alt="">
                         </div>
-                        <h5>Nguyễn Văn A</h5>
+                        <h5>Nguyễn Văn Anh</h5>
                         <ul class="tabs">
-                            <li><a href="">Your Information</a></li>
-                            <li><a href="" class="active">Your orders</a></li>
+                            <li><a href="./profile.html">Your Information</a></li>
+                            <li><a href="./order.html" class="active">Your orders</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-9">
                     <div class="orderBox">
                         <h1>Orders list</h1>
-                        <table class="table table-default table-bordered">
+                        <table class="table table-default orderTable table-bordered">
                             <thead>
                               <tr>
                                 <th scope="col" class="text-center">No.</th>
@@ -271,7 +274,7 @@
                                 <td>9:34 - 11/07/2023</td>
                                 <td>money</td>
                                 <td>New</td>
-                                <td class="text-center"><i class="fa-regular fa-eye"></i></td>
+                                <td class="text-center"><a href="./order-detail.html"><i class="fa-regular fa-eye"></i></a></td>
                               </tr>
                               <tr class="">
                                 <th scope="row" class="text-center">2</th>
@@ -279,7 +282,7 @@
                                 <td>9:34 - 11/07/2023</td>
                                 <td>money</td>
                                 <td>New</td>
-                                <td class="text-center"><i class="fa-regular fa-eye"></i></td>
+                                <td class="text-center"><a href="./order-detail.html"><i class="fa-regular fa-eye"></i></a></td>
                               </tr>
                               <tr class="">
                                 <th scope="row" class="text-center">3</th>
@@ -287,7 +290,7 @@
                                 <td>9:34 - 11/07/2023</td>
                                 <td>money</td>
                                 <td>New</td>
-                                <td class="text-center"><i class="fa-regular fa-eye"></i></td>
+                                <td class="text-center"><a href="./order-detail.html"><i class="fa-regular fa-eye"></i></a></td>
                               </tr>
                               <tr class="">
                                 <th scope="row" class="text-center">4</th>
@@ -295,7 +298,7 @@
                                 <td>9:34 - 11/07/2023</td>
                                 <td>money</td>
                                 <td>New</td>
-                                <td class="text-center"><i class="fa-regular fa-eye"></i></td>
+                                <td class="text-center"><a href="./order-detail.html"><i class="fa-regular fa-eye"></i></a></td>
                               </tr>
                               <tr class="">
                                 <th scope="row" class="text-center">5</th>
@@ -303,7 +306,7 @@
                                 <td>9:34 - 11/07/2023</td>
                                 <td>money</td>
                                 <td>New</td>
-                                <td class="text-center"><i class="fa-regular fa-eye"></i></td>
+                                <td class="text-center"><a href="./order-detail.html"><i class="fa-regular fa-eye"></i></a></td>
                               </tr>
                             </tbody>
                         </table>
@@ -328,44 +331,46 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3">
-            <div class="boxLogo">
-              <img src="./public/image/logo.svg" alt="">
-              <img src="./public/image/logo-name.svg" alt="">
-            </div>
+            <a href="./index.html">
+              <div class="boxLogo">
+                <img src="./public/image/logo.svg" alt="">
+                <img src="./public/image/logo-name.svg" alt="">
+              </div>
+            </a>
           </div>
           <div class="col-md-9">
             <div class="row">
               <div class="col-md-3">
                 <h5 class="title">Company</h5>
                 <ul class="list">
-                  <li class="item"><a href="">About Us</a></li>
-                  <li class="item"><a href="">Careers</a></li>
-                  <li class="item"><a href="">Terms &<br/> Conditions</a></li>
-                  <li class="item"><a href="">Cancelation &<br/> Refund Policy</a></li>
+                  <li class="item"><a href="./about-us.html">About Us</a></li>
+                  <li class="item"><a href="./career.html">Careers</a></li>
+                  <li class="item"><a href="./consular-egalization.html">Consular Rgalization</a></li>
+                  <li class="item"><a href="./cancellation-policy.html">Cancelation &<br/> Refund Policy</a></li>
                 </ul>
               </div>
               <div class="col-md-3">
                 <h5 class="title">Company</h5>
                 <ul class="list">
-                  <li class="item"><a href="">About Us</a></li>
-                  <li class="item"><a href="">Careers</a></li>
-                  <li class="item"><a href="">Terms &<br/> Conditions</a></li>
-                  <li class="item"><a href="">Cancelation &<br/> Refund Policy</a></li>
+                  <li class="item"><a href="./notarized-translation.html">Notarized Translation</a></li>
+                  <li class="item"><a href="./vietnam-passport.html">Vietnam Passport</a></li>
+                  <li class="item"><a href="./blog.html">Blog</a></li>
+                  <li class="item"><a href="./contact.html">Contact</a></li>
                 </ul>
               </div>
               <div class="col-md-3">
                 <h5 class="title">Company</h5>
                 <ul class="list">
-                  <li class="item"><a href="">About Us</a></li>
-                  <li class="item"><a href="">Careers</a></li>
-                  <li class="item"><a href="">Terms &<br/> Conditions</a></li>
-                  <li class="item"><a href="">Cancelation &<br/> Refund Policy</a></li>
+                  <li class="item"><a href="./apply-visa-step-1.html">Apply Visa Step 1</a></li>
+                  <li class="item"><a href="./apply-visa-step-2.html">Apply Visa Step 2</a></li>
+                  <li class="item"><a href="./apply-visa-step-3.html">Apply Visa Step 3</a></li>
+                  <li class="item"><a href="./apply-visa-step-4.html">Apply Visa Step 4</a></li>
                 </ul>
               </div>
               <div class="col-md-3">
                 <h5 class="title">Company</h5>
                 <ul class="list">
-                  <li class="item"><a href="">About Us</a></li>
+                  <li class="item"><a href="./terms-and-conditions.html">Terms & Conditions</a></li>
                   <li class="item"><a href="">Careers</a></li>
                   <li class="item"><a href="">Terms &<br/> Conditions</a></li>
                   <li class="item"><a href="">Cancelation &<br/> Refund Policy</a></li>
@@ -393,6 +398,44 @@
         </div>
       </div>
     </footer>
+    <div class="popup">
+        <div class="container container-popup">
+            <div class="box">
+                <i class="fa-solid fa-xmark closePopup"></i>
+                <h3 class="title">REQUEST REFUND</h3>
+                <table class="popupTable">
+                    <tr>
+                        <th><h6 class="type"><img src="./public/image/fly.svg" alt=""> <strong>Your services :</strong></h6></th>
+                    </tr>
+                    <tr>
+                        <td>1. Arrival Fast track:</td>
+                        <td>1 x USD 45 = USD 45</td>
+                    </tr>
+                    <tr>
+                        <td>2. Tourist eVisa:</td>
+                        <td>1 x USD 75 = USD 75</td>
+                    </tr>
+                    <tr>
+                        <td class="text-color-red">Total amount : </td>
+                        <td class="text-color-red"><strong>USD 120</strong></td>
+                    </tr>
+                </table>
+                <hr>
+                <h6 class="type"><img src="./public/image/fly.svg" alt=""> <strong>Request details :</strong></h6>
+                <p>The services that you would like to refund :</p>
+                <ul>
+                    <li>Arrival Fast track</li>
+                    <li>Tourist eVisa</li>
+                </ul>
+                <h6 class="type"><strong>Reasons why you should be refunded :</strong></h6>
+                <div class="mb-3">
+                  <label for="" class="form-label"></label>
+                  <textarea class="form-control" name="" id="" rows="3"></textarea>
+                </div>
+                <button class="btnSubmit">Submit</button>
+            </div>
+        </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script
@@ -400,6 +443,5 @@
 
     <script
       src="./public/js/bootstrap-5.0.2/js/bootstrap.min.js"></script>
-
   </body>
 </html>
